<resources>
    <string name="app_name">M4S</string>
    <string name="nav_home">首页</string>
    <string name="nav_work_order">快速工单</string>
    <string name="nav_pm">PM工单</string>
    <string name="nav_bd">基础数据</string>
    <string name="nav_di">日巡检</string>
    <string name="nav_sync">同步</string>
    <string name="nav_manage">管理</string>
    <string name="nav_settings">设置</string>
    <string name="nav_logout">退出</string>
    <string name="hint_username">登陆账号</string>
    <string name="hint_password">密码</string>
    <string name="hint_password_old">当前密码</string>
    <string name="hint_password_new">新密码</string>
    <string name="hint_password_new2">再次输入新密码</string>
    <string name="logo_title">M4S</string>
    <string name="title_activity_login">地铁维护系统移动端</string>
    <string name="title_activity_login_real">AFC维护系统-生产%1$s</string>
    <string name="title_activity_login_test">AFC维护系统-测试%1$s</string>
    <string name="title_activity_login_dev">AFC维护系统-开发%1$s</string>
    <string name="subtitle_activity_login">北京地铁科技发展有限公司</string>
    <string name="build_date">Build: 2020.01.08 RADC </string>
    <string name="action_login">登录</string>
    <string name="action_settings">设置</string>
    <string name="activity_change_pwd_commit">确定</string>
    <string name="title_activity_login_settings">登录设置</string>
    <string name="error_empty">不能为空</string>
    <string name="error_required">必填</string>
    <string name="error_num">只能填写数字</string>
    <string name="error_service_unavailable">连接服务出错，请稍后重试</string>
    <string name="error_service_online">在线登录失败，转入离线登录</string>
    <string name="is_upload_task">有待上传的工单</string>
    <string name="error_invalidate_authentication">用户名或密码不正确</string>
    <string name="error_login_failed">登录失败</string>
    <string name="pref_api_base_url">服务地址</string>
    <string name="error">出错了</string>
    <string name="title_activity_work_order">快速工单</string>
    <string name="title_activity_cm_work">CM工单</string>
    <string name="error_work_order_not_found">没有找到这条工单</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_synchronized">已同步</string>
    <string name="action_sync">同步</string>
    <string name="message_confirm_delete_work_order">确定要删除这条快速工单吗？</string>
    <string name="confirm_delete">确认删除</string>
    <string name="delete">删除</string>
    <string name="hint_device_number"> 逻辑设备编码</string>
    <string name="hint_device_name">逻辑设备名称</string>
    <string name="hint_physic__number">物理设备编码</string>
    <string name="hint_physic__name">物理设备名称</string>
    <string name="hint_device_location">位置描述</string>
    <string name="hint_fault_description">故障现象</string>
    <string name="hint_fault_type">故障类型</string>
    <string name="hint_report_type">发现人类型</string>
    <string name="hint_reporter">发现人</string>
    <string name="hint_fault_note">故障现象说明</string>
    <string name="hint_fault_start_time">故障开始时间</string>
    <string name="section_input_operation">填写处理信息</string>
    <string name="section_input_fault">填写故障信息</string>
    <string name="section_input_device">填写设备信息</string>
    <string name="section_device">设备信息</string>
    <string name="section_fault">故障信息</string>
    <string name="section_operation">处理信息</string>
    <string name="hint_fault_reason">故障原因</string>
    <string name="hint_operation">已执行活动</string>
    <string name="hint_operation_result">工作完成情况</string>
    <string name="hint_operation_note">备注</string>
    <string name="hint_form_flag">是否上表</string>
    <string name="hint_operator">处理人:</string>
    <string name="hint_operation_start_time">工作开始时间</string>
    <string name="hint_operation_end_time">工作结束时间</string>
    <string name="action_scan_work_order">扫描设备二维码创建快速工单</string>
    <string name="action_new_work_order">创建快速工单</string>
    <string name="action_scan_cm">扫码新建或查找CM工单</string>
    <string name="action_new_cm">创建CM工单</string>
    <string name="action_work_cm_start">扫码找出CM工单</string>
    <string name="title_activity_edit_work_order">编辑快速工单</string>
    <string name="format_title_activity_edit_work_order">编辑快速工单#%1$s</string>
    <string name="format_title_activity_work_order">快速工单#%1$s</string>
    <string name="format_title_activity_cm_work_order">CM工单#%1$s</string>
    <string name="title_activity_new_work_order">新建快速工单</string>
    <string name="title_activity_new_cm_work_order">新建CM工单</string>
    <string name="title_activity_cm_work_report">已上传的CM工单</string>
    <string name="title_activity_cm_work_delete">已删除的CM工单</string>
    <string name="action_done">完成</string>
    <string name="set">选择</string>
    <string name="cm_confirm">确认</string>
    <string name="cm_cancel">取消</string>
    <string name="new_materiels">申请物料</string>
    <string name="new_spare_parts">申请备件</string>
    <string name="change_dispose">转单</string>
    <string name="work_done">工作完成</string>
    <string name="history">历史</string>
    <string name="screen">筛选</string>
    <string name="screen_all">全部</string>
    <string name="screen_running">进行中</string>
    <string name="screen_done">已完成</string>
    <string name="screen_upload">已上传</string>
    <string name="tab_date">日期</string>
    <string name="tab_time">时间</string>
    <string name="local_work_order">未同步快速工单</string>
    <string name="local_cm_order_new">新建CM工单</string>
    <string name="support_linear_layout_manager">android.support.v7.widget.LinearLayoutManager</string>
    <string name="no_content">没有内容</string>
    <string name="no_work_orders">没有快速工单</string>
    <string name="no_local_work_orders">没有未同步的快速工单</string>
    <string name="no_uploaded_work_orders">没有已同步的快速工单</string>
    <string name="title_activity_sync">同步</string>
    <string name="title_activity_part">库存件</string>
    <string name="action_sync_pm">同步PM工单</string>
    <string name="title_fragment_home">首页</string>
    <string name="title_fragment_work_order">快速工单</string>
    <string name="title_fragment_pm">PM工单</string>
    <string name="title_fragment_di">日巡检</string>
    <string name="quick_entries">快速入口</string>
    <string name="nav_cm">CM工单</string>
    <string name="error_downloading_param_values">下载设备参数列表失败了</string>
    <string name="error_downloading_device_list">下载设备列表失败了</string>
    <string name="error_uploading_work_orders">同步快速工单失败了</string>
    <string name="error_downloading_pm">下载PM工单失败</string>
    <string name="error_downloading_di">下载日巡检任务失败</string>
    <string name="format_remaining_days">剩余%1$d天</string>
    <string name="format_pm_job_outdated_tx">已超期</string>
    <string name="format_cm_job_outdated_tx">已超期</string>
    <string name="format_pm_job_outdated">%1$d</string>
    <string name="format_pm_job_outdated_day">天</string>
    <string name="format_pm_job_plane">还有%1$d天可以开始</string>
    <string name="format_remaining_job_items">%1$d个工作项未完成</string>
    <string name="no_pm_jobs">没有符合条件的记录</string>
    <string name="title_activity_pm_job">PM工单</string>
    <string name="title_activity_day_inspect_list">日巡检列表</string>
    <string name="title_activity_day_inspect_edit">日巡检编辑</string>
    <string name="pm_job_outdated">已超期</string>
    <string name="pm_job_done">已完成</string>
    <string name="message_pm_job_not_found">找不到这条工单</string>
    <string name="message_cm_job_not_found">找不到这条工单</string>
    <string name="caption_operation_result">执行结果</string>
    <string name="caption_job_item_description">工作描述</string>
    <string name="format_job_item_ordinal">工作项%1$s</string>
    <string name="error_no_result">请填写执行结果</string>
    <string name="hint_input_result_numeric">请输入数值</string>
    <string name="label_pm_job_result_unit">单位：</string>
    <string name="label_pm_job_result_status">状态：</string>
    <string name="hint_input_result_text">请输入结果</string>
    <string name="format_job_package_no">工作包%1$s</string>
    <string name="validate">检查</string>
    <string name="error_uploading_pm_reports">上传PM工单报告失败</string>
    <string name="error_uploading_day_inspect_reports">上传日巡检报告失败</string>
    <string name="title_activity_sync_settings">同步</string>
    <string name="title_activity_settings">设置</string>
    <string name="set_pwd">修改密码</string>
    <string name="set_test1">设置测试</string>
    <string name="action_scan_pm">扫描设备二维码查询PM工单</string>
    <string name="zbar_scanner">扫描二维码</string>
    <string name="message_device_pm_not_found">找不到此设备的PM工单</string>
    <string name="message_device_cm_not_found">此设备没有CM工单，是否新建一条</string>
    <string name="activity_scan">扫描设备二维码</string>
    <string name="message_confirm_exit_work_order_editor">快速工单尚未保存，确定要退出吗？</string>
    <string name="message_confirm_exit_cm_work_order_new">新建CM工单尚未保存，确定要退出吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="message_press_back_again_to_exit">再按一次回退键退出</string>
    <string name="pwd_no_match">两次输入的新密码不一致</string>
    <string name="note_work_order_deleted">1条快速工单已删除</string>
    <string name="undo">撤销</string>
    <string name="login_out">退出登录</string>
    <string name="Immediately_exit">直接退出</string>
    <string name="return_nav_home">上传后退出</string>
    <string name="error_change_pwd">修改密码失败</string>
    <string name="retry">重试</string>
    <string name="err_upload_work_order_fail">上传快速工单失败</string>
    <string name="error_downloading_users">下载用户信息失败了</string>
    <string name="message_work_order_uploaded">1条工单已同步</string>
    <string name="message_day_inspect_not_found">找不到这条日巡检</string>
    <string name="title_dialog_datetime_picker">选择日期时间</string>
    <string name="title_pick_start_time">工作开始时间</string>
    <string name="title_pick_end_time">工作结束时间</string>
    <string name="day_inspect_over_time">超期</string>
    <string name="day_inspect_normal">正常</string>
    <string name="format_remaining_hours">剩余  %1$d天%2$d小时%3$d分钟</string>
    <string name="day_format_remaining_hours">剩余  %1$d小时%2$d分钟</string>
    <string name="format_overtime_hours">已超期  %1$d天%2$d小时%3$d分钟</string>
    <string name="cm_work_status">工单状态</string>
    <string name="cm_work_status_upload">工单状态 已上传</string>
    <string name="cm_work_status_finish">工单状态 关闭</string>
    <string name="day_format_overtime_hours">已超期  %1$d小时%2$d分钟</string>
    <string name="hint_day_inspect_date">任务日期:</string>
    <string name="hint_day_inspect_endtime">完成期限:</string>
    <string name="hint_station_des">车站</string>
    <string name="label_day_inspect_result_unit">单位：</string>
    <string name="message_pm_work_not_done">还有未完成工作项</string>
    <string name="message_cm_work_not_done">填写未完成</string>
    <string name="message_day_inspect_not_done">还有未完成工作项</string>
    <string name="not_selected">未选择</string>
    <string name="actionmode_cancel">取消测试</string>
    <string name="actionmode_settings">设置测试</string>
    <string name="actionmode_test">测试</string>
    <string name="error_downloading_base_data">下载基础数据失败</string>
    <string name="message_uploading">正在上传</string>
    <string name="signing_in">正在登录</string>
    <string name="cancel">取消</string>
    <string name="new_cm_work">新建CM工单</string>
    <string name="ok">确定</string>
    <string name="account">账号</string>
    <string name="change_password">修改密码</string>
    <string name="check_updates">检查更新</string>
    <string name="no_updates">已经是最新版本了</string>
    <string name="update_now">下载安装</string>
    <string name="later">稍后再说</string>
    <string name="software_update">有新版本了</string>
    <string name="format_current_version">当前版本v%1$s</string>
    <string name="format_current_version_real8833">（正式库8833）当前版本v%1$s</string>
    <string name="format_current_version_test8832">（测试库8832）当前版本v%1$s</string>
    <string name="format_current_version_develop8831">（开发库8831）当前版本v%1$s</string>
    <string name="hint_fault_class">故障类型</string>
    <string name="hint_work_note">工作过程描述</string>
    <string name="hint_fault_reason_note">故障原因描述</string>
    <string name="hint_fault_grade">故障等级</string>
    <string name="hint_work_done">工作完成情况</string>
    <string name="cm_report_text">CM工单完成报告</string>
</resources>