<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/screen"
        android:icon="@drawable/ic_more_vert_white_18dp"
        android:title="@string/screen"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/screen_all"
                android:icon="@drawable/ic_more_vert_white_18dp"
                android:title="@string/screen_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/screen_running"
                android:icon="@drawable/ic_more_vert_white_18dp"
                android:title="@string/screen_running"
                app:showAsAction="never" />
            <item
                android:id="@+id/screen_done"
                android:icon="@drawable/ic_more_vert_white_18dp"
                android:title="@string/screen_done"
                app:showAsAction="never" />
            <item
                android:id="@+id/screen_upload"
                android:icon="@drawable/ic_more_vert_white_18dp"
                android:title="@string/screen_upload"
                app:showAsAction="never" />

        </menu>

    </item>



</menu>