<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/page_vertical_spacing"
        android:paddingLeft="@dimen/page_horizontal_spacing"
        android:paddingRight="@dimen/page_horizontal_spacing"
        android:paddingTop="@dimen/page_vertical_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cm_report_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/accent" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <AutoCompleteTextView
                android:id="@+id/fault_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_fault_grade"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/fault_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_fault_class"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/fault_cause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_fault_reason"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_operation"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/work_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_work_done"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/fault_reason_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fault_reason_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/work_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_work_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_operation_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/operation_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_operation_start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_operation_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/operation_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_operation_end_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>