<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Xingyan, Ltd - All Rights Reserved
  ~
  ~ Unauthorized copying of this file, via any medium is strictly prohibited proprietary and
  ~  confidential.
  ~
  ~ This file is originally created by San.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/page_vertical_spacing"
        android:paddingLeft="@dimen/page_horizontal_spacing"
        android:paddingRight="@dimen/page_horizontal_spacing"
        android:paddingTop="@dimen/page_vertical_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/section_input_operation"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/accent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/fault_cause"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingBottom="5dp"
                android:gravity="bottom"
                android:editable="false"
                android:hint="@string/hint_fault_reason"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/operation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingBottom="5dp"
                android:gravity="bottom"
                android:editable="false"
                android:hint="@string/hint_operation"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/operation_result"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingBottom="5dp"
                android:gravity="bottom"
                android:editable="false"
                android:hint="@string/hint_operation_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/operation_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_operation_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/form_flag"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingBottom="5dp"
                android:gravity="bottom"
                android:editable="false"
                android:hint="@string/hint_form_flag"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_operation_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/operation_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_operation_start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_operation_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/operation_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_operation_end_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_operator"/>

            <TextView
                android:id="@+id/operator_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
