<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Xingyan, Ltd - All Rights Reserved
  ~
  ~ Unauthorized copying of this file, via any medium is strictly prohibited proprietary and
  ~  confidential.
  ~
  ~ This file is originally created by San.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/page_vertical_spacing"
        android:paddingLeft="@dimen/page_horizontal_spacing"
        android:paddingRight="@dimen/page_horizontal_spacing"
        android:paddingTop="@dimen/page_vertical_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/section_input_device"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/accent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/device_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_device_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                android:hint="@string/hint_device_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/physic_code_word_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_physic__number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <AutoCompleteTextView
                android:id="@+id/physic_name_word_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_physic__name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>

    <!--android:editable="false" -->